src/k8s/booking-service-frontend-np.yaml
apiVersion: v1
kind: Service
metadata:
    name: react-app-np-srv
spec:
    type: NodePort
    selector:
        app: react-app
    ports:
        - name: react-app
          protocol: TCP
          port: 80
          targetPort: 80
